// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignMessage should render 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 epQFkJ"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="SignMessage"
            >
              <div>
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-5"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-2xl"
                          data-testid="header__title"
                        >
                          Sign Message
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Provide a message below and sign with your mnemonic passphrase.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="signatory-address"
                      >
                        Signatory
                      </label>
                      <div
                        class="Input__InputWrapperStyled-sc-1i8sd1r-0 ktoJbG"
                        disabled=""
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-18vw8a4-0 jiaHcL flex-shrink-0"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                          >
                            <img
                              alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"40\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                              title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                            />
                          </div>
                        </div>
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <input
                            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full font-semibold text-theme-secondary-text"
                            data-testid="Input"
                            disabled=""
                            name="signatory-address"
                            value="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                          />
                        </div>
                      </div>
                    </fieldset>
                    <fieldset
                      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="message"
                      >
                        Message
                      </label>
                      <div
                        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                      >
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <input
                            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                            data-testid="SignMessage__message-input"
                            name="message"
                            value=""
                          />
                        </div>
                      </div>
                    </fieldset>
                    <fieldset
                      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="mnemonic"
                      >
                        Mnemonic
                      </label>
                      <div
                        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                      >
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <input
                            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                            data-testid="SignMessage__mnemonic-input"
                            name="mnemonic"
                            type="password"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                        >
                          <div
                            class=""
                          >
                            <button
                              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
                              data-ring-focus-margin="-m-1"
                              data-testid="InputPassword__toggle"
                              type="button"
                            >
                              <div
                                class="sc-bdvvtL qGXhc"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  eye.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-8 space-x-3"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                    data-testid="SignMessage__cancel-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe"
                    data-testid="SignMessage__submit-button"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Sign
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignMessage should render for ledger wallets 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 epQFkJ"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="SignMessage"
            >
              <div>
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-5"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-2xl"
                          data-testid="header__title"
                        >
                          Sign Message
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Provide a message below and sign with your ledger.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="signatory-address"
                      >
                        Signatory
                      </label>
                      <div
                        class="Input__InputWrapperStyled-sc-1i8sd1r-0 ktoJbG"
                        disabled=""
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-18vw8a4-0 jiaHcL flex-shrink-0"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                          >
                            <img
                              alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"40\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                              title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                            />
                          </div>
                        </div>
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <input
                            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full font-semibold text-theme-secondary-text"
                            data-testid="Input"
                            disabled=""
                            name="signatory-address"
                            value="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                          />
                        </div>
                      </div>
                    </fieldset>
                    <fieldset
                      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="message"
                      >
                        Message
                      </label>
                      <div
                        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                      >
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <input
                            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                            data-testid="SignMessage__message-input"
                            name="message"
                            value=""
                          />
                        </div>
                      </div>
                    </fieldset>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-8 space-x-3"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                    data-testid="SignMessage__cancel-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe"
                    data-testid="SignMessage__submit-button"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Sign
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignMessage should render signed step with wallet alias 1`] = `
<div>
  <section>
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Message Successfully Signed
        </h1>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 GJFVE no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
        >
          Signatory
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <div
            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                data-testid="TruncateEnd"
              >
                my-alias
              </span>
            </span>
            <span
              class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr
            </span>
          </div>
        </div>
      </div>
      <div
        class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"40\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
            title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
          />
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 GJFVE no-ligatures text-lg break-all"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
        >
          Message
        </div>
        <div
          class="flex items-center font-semibold"
        >
          Hello World
        </div>
      </div>
    </div>
    <div
      class="pt-6"
    >
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="json-signature"
        >
          Signature
        </label>
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 iJpvqJ py-4"
          disabled=""
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <textarea
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full resize-none text-theme-secondary-text"
              data-testid="TextArea"
              disabled=""
              name="signature"
              style="height: 4px;"
              wrap="hard"
            >
              {"message":"Hello World","signatory":"03d7001f0cfff639c0e458356581c919d5885868f14f72ba3be74c8f105cce34ac","signature":"e16e8badc6475e2eb4eb814fa0ae434e9ca2240b6131f3bf560969989366baa270786fb87ae2fe2945d60408cedc0a757768ebc768b03bf78e5e9b7a20291ac6"}
            </textarea>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</div>
`;
